# inspect-robots-agibot-a2

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
plans/: 0001-a2-go1-design.md
src/inspect_robots_agibot_a2/: CLAUDE.md  __init__.py  _ros.py  config.py  embodiment.py  operator.py  packing.py  policy.py  preflight.py
tests/: conftest.py  test_api_snapshot.py  test_compat.py  test_config.py  test_embodiment.py  test_embodiment_docs.py  test_eval_end_to_end.py  test_operator.py  test_packing.py  test_policy.py  test_preflight.py  test_ros.py
