[build-system]
requires = ["hatchling>=1.18", "hatch-vcs>=0.3", "hatch-fancy-pypi-readme>=24.1"]
build-backend = "hatchling.build"

[project]
name = "inspect-robots-agibot-a2"
dynamic = ["version", "readme"]
description = "Inspect Robots adapters for AgiBot A2 dual arms and GO-1 or openpi policies."
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "RoboCurve" }]
keywords = ["robotics", "vla", "agibot", "a2", "go1", "openpi", "inspect-robots"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "inspect-robots>=0.12",
    "numpy>=1.24",
    "requests>=2.31",
    "json-numpy>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.5",
    "numpy<2.5",
]

[project.urls]
Homepage = "https://github.com/robocurve/inspect-robots-agibot-a2"
Framework = "https://github.com/robocurve/inspect-robots"
Collection = "https://github.com/robocurve/worldevals"

[project.entry-points."inspect_robots.embodiments"]
a2_arms = "inspect_robots_agibot_a2.embodiment:A2Embodiment"

[project.entry-points."inspect_robots.policies"]
go1 = "inspect_robots_agibot_a2.policy:Go1Policy"
openpi = "inspect_robots_agibot_a2.policy:OpenpiPolicy"

[project.scripts]
inspect-robots-agibot-a2-preflight = "inspect_robots_agibot_a2.preflight:main"

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_robots_agibot_a2"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF", "D1"]
ignore = ["D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D1"]

[tool.ruff.lint.isort]
known-first-party = ["inspect_robots_agibot_a2"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/inspect_robots_agibot_a2"]

[[tool.mypy.overrides]]
module = [
    "rclpy.*",
    "sensor_msgs.*",
    "builtin_interfaces.*",
    "requests.*",
    "json_numpy.*",
    "openpi_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["inspect_robots_agibot_a2"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.$",
    ": \\.\\.\\.$",
    "pragma: no cover",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!NOTE\][ \t]*$'
replacement = '> **Note:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!TIP\][ \t]*$'
replacement = '> **Tip:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!IMPORTANT\][ \t]*$'
replacement = '> **Important:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!WARNING\][ \t]*$'
replacement = '> **Warning:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!CAUTION\][ \t]*$'
replacement = '> **Caution:**'
